<resources>
    <string name="app_name">Eye Critic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_reviews_label">Latest Movie Reviews</string>
    <string name="nav_favorites_label">My Favorites</string>
    <string name="nav_review_details">Movie Review Details</string>
    <string name="movie_details_image">Movie Image</string>
    <string name="movie_details_read_full_article">Read full article</string>
    <string name="movie_details_published_in">"Published in "</string>
    <string name="movie_details_by">"By "</string>
    <string name="movie_image">Movie Image</string>
    <string name="review_updated_message">Review updated</string>
    <string name="added_to_favorites_message">Added to favorites</string>
    <string name="share_article_with_message">Share article with</string>
    <string name="list_updated_message">List updated</string>
    <string name="bottom_nav_all_reviews">All Reviews</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="no_reviews_in_this_list">No reviews in this list</string>
    <string name="no_item_in_list_image">No item in list image</string>
    <string name="review_display_error_message">The review couldn\'t be displayed</string>
    <string name="delete_review_dialog_title">Delete Review from List</string>
    <string name="delete_review_dialog_message_entry">"Are you sure you want to delete "</string>
    <string name="delete_review_dialog_message_final">\?</string>
    <string name="delete_review_dialog_delete_action">DELETE</string>
    <string name="delete_review_dialog_cancel_action">CANCEL</string>
    <string name="review_deleted_message">Review deleted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="eye_critic">Eye Critic</string>
    <string name="the_new_york_times_challenge">The New York Times Challenge</string>
    <string name="developed_by">Developed By</string>
    <string name="app_logo">App Logo</string>
    <string name="movie_list_menu_delete_all">Delete All</string>
    <string name="delete_all_reviews_dialog_title">Delete All Reviews</string>
    <string name="delete_all_reviews_dialog_message">Are you sure you want to delete all reviews from the list?</string>
    <string name="all_reviews_deleted_message">All reviews deleted</string>
    <string name="movie_list_get_latest_reviews">Get Latest Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_movie_search">Search…</string>
    <string name="search_movie_empty_title_message">The title cannot be empty</string>
    <string name="nav_search_reviews">Search Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>