<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="onToggleFavorite"
            type="android.view.View.OnClickListener" />

        <variable
            name="onShareArticle"
            type="android.view.View.OnClickListener" />

        <variable
            name="onGoToArticle"
            type="android.view.View.OnClickListener" />

        <variable
            name="onToggleMenu"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.pedro.schwarz.desafioyourdev.ui.viewmodel.MovieDetailsViewModel" />

        <variable
            name="movie"
            type="com.pedro.schwarz.desafioyourdev.ui.databinding.data.MovieData" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.fragment.MovieDetailsFragment">

            <ImageView
                android:id="@+id/movie_details_image"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/movie_details_image"
                android:scaleType="centerCrop"
                android:src="@drawable/image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:src="@{movie.src}"
                app:thumbnail="@{false}" />

            <androidx.cardview.widget.CardView
                android:id="@+id/movie_details_age_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="@{movie.mpaa_rating.isEmpty() ? View.GONE : View.VISIBLE}"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setRatingColor="@{movie.mpaa_rating}">

                <TextView
                    android:id="@+id/movie_details_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="4dp"
                    android:text="@{movie.mpaa_rating}"
                    android:textAlignment="center"
                    android:textColor="@color/colorLight"
                    android:textSize="14sp"
                    tools:text="Age" />
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_image">

                <TextView
                    android:id="@+id/movie_details_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{movie.display_title}"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Movie title" />

                <TextView
                    android:id="@+id/movie_details_headline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{movie.headline}"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_title"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_title"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_title"
                    tools:text="Article headline" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_headline"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_headline"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_headline" />

                <TextView
                    android:id="@+id/movie_details_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="8sp"
                    android:text="@{movie.summary_short}"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_headline"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_headline"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    tools:text="Article summary" />

                <TextView
                    android:id="@+id/movie_details_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:drawablePadding="8dp"
                    android:onClick="@{onGoToArticle}"
                    android:text="@string/movie_details_read_full_article"
                    android:textColor="@color/colorAccent"
                    app:drawableStartCompat="@drawable/ic_article"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_summary"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_summary"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_summary" />

                <LinearLayout
                    android:id="@+id/movie_details_date_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/movie_details_author_info"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_link"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_link"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_link"
                    app:layout_constraintVertical_bias="1.0"
                    app:layout_constraintVertical_chainStyle="packed">

                    <TextView
                        android:id="@+id/movie_details_publication_date_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/movie_details_published_in"
                        android:textAlignment="viewEnd"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/movie_details_publication_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:setToLocaleDate="@{movie.publication_date}"
                        tools:text="Publication date" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/movie_details_author_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_date_info"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/movie_details_date_info"
                    app:layout_constraintTop_toBottomOf="@+id/movie_details_date_info">

                    <TextView
                        android:id="@+id/movie_details_by_helper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/movie_details_by"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/movie_details_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{movie.byline}"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="Author" />
                </LinearLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/movie_details_options_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{onToggleMenu}"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:shapeAppearance="@style/ShapeAppearance.SquaredFAB"
                    app:tint="@color/colorLight"
                    app:toggleRotate="@{viewModel.isMenuOpen}" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/movie_details_toggle_favorite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{onToggleFavorite}"
                    android:src="@drawable/ic_unfavorite"
                    app:backgroundTint="@color/colorLight"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toTopOf="@+id/movie_details_options_btn"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_options_btn"
                    app:setFavoriteStateIndicator="@{movie.favorite}"
                    app:shapeAppearance="@style/ShapeAppearance.SquaredFAB"
                    app:tint="@color/colorError"
                    app:toggleVisibility="@{viewModel.isMenuOpen}" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/movie_details_share_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{onShareArticle}"
                    android:src="@drawable/ic_share"
                    app:backgroundTint="@color/colorLight"
                    app:fabSize="mini"
                    app:layout_constraintBottom_toTopOf="@+id/movie_details_toggle_favorite_btn"
                    app:layout_constraintEnd_toEndOf="@+id/movie_details_toggle_favorite_btn"
                    app:shapeAppearance="@style/ShapeAppearance.SquaredFAB"
                    app:tint="@color/colorSuccess"
                    app:toggleVisibility="@{viewModel.isMenuOpen}" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>